# clenv

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.ko.md  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  dirs.rs  error.rs  main.rs  rc.rs
src/cli/: mod.rs  profile.rs
src/profile/: export.rs  manager.rs  mod.rs  vcs.rs
tests/: e2e_test.rs  profile_test.rs
