[package]
name = "clenv"
version = "0.1.2"
publish = false
edition = "2021"
description = "Claude Code profile manager - multi-profile switching with git-based version control"
license = "MIT"
authors = ["chad <chaaaamni@gmail.com>"]
homepage = "https://github.com/Imchaemin/clenv"
repository = "https://github.com/Imchaemin/clenv"
documentation = "https://github.com/Imchaemin/clenv#readme"
keywords = ["claude", "ai", "profile", "env", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github", "docs"]

[[bin]]
name = "clenv"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "color", "suggestions", "env"] }

# Serialization / deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Git operations (profile version control)
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Terminal UI
indicatif = "0.17"
colored = "2"
dialoguer = "0.11"
console = "0.15"

# Filesystem utilities
dirs = "5"
walkdir = "2"
fs_extra = "1"

# Compression / archiving (profile export/import)
tar = "0.4"
flate2 = "1"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# String / glob pattern matching
glob = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"

# Table output
tabled = "0.15"

# Lightweight regex (pattern matching in export)
regex-lite = "0.1"

# Temporary files (temp directory for export/import)
tempfile = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# cargo-dist release automation config
[workspace.metadata.dist]
cargo-dist-version = "0.22.1"
ci = "github"
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
]
tap = "Imchaemin/homebrew-clenv"
formula = "clenv"
install-updater = false
